# sanitasCopagos

./: main.py  pyproject.toml
src/: main.py  schemas.py
src/database/: conection.py  models.py
src/services/: import_service.py  normalization.py
src/static/: admin.css  admin.html  admin.js  index.html  index.js  styles.css
